raffia/tests/error/scss/at-rule/forward/with-before-hide.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but `<ident>` received
  ┌─ with-before-hide.scss:1:31
  │
1 │ @forward "other" with ($a: b) hide c;
  │                               ^^^^


